--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "npm run dev",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
@@ -39,12 +40,15 @@
     "lucide-react": "^0.268.0",
     "next": "13.4.13",
     "next-cloudinary": "^4.18.0",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "recharts": "^2.8.0",
+    "stripe": "^13.8.0",
     "styled-components": "^5.3.11",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
